--- a/po/hi.po
+++ b/po/hi.po
@@ -1,115 +1,102 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR Free Software Foundation, Inc.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# translation of yelp.HEAD.hi.po to Hindi
+# Copyright (C) 2004 Free Software Foundation, Inc.
+# Ravishankar Shrivastava <raviratlami@yahoo.com>, 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Yelp 2.4 \n"
-"POT-Creation-Date: 2004-04-20 17:58-0500\n"
-"PO-Revision-Date: 2003-01-10 20:38+0530\n"
-"Last-Translator: Bhopal team <anuragseetha@yahoo.com>\n"
-"Language-Team: Gnome Hindi Team <indlinux-hindi-gnome@lists.sourceforge."
-"net>\n"
+"Project-Id-Version: yelp.HEAD.hi\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-07-21 04:42+0200\n"
+"PO-Revision-Date: 2004-07-10 14:21+0530\n"
+"Last-Translator: Ravishankar Shrivastava <raviratlami@yahoo.com>\n"
+"Language-Team: Hindi <indlinux-hindi@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: data/toc.xml.in.h:1
-#, fuzzy
 msgid "Applets"
-msgstr "एप्लीकेशन"
+msgstr "एप्लेट्स"
 
 #: data/toc.xml.in.h:2 src/yelp-man.c:429
 msgid "Applications"
-msgstr "एप्लीकेशन"
+msgstr "अनुप्रयोग"
 
 #: data/toc.xml.in.h:3
-#, fuzzy
 msgid "Desktop"
-msgstr "गनोम डेस्कटाप"
+msgstr "डेस्कटॉप"
 
 #: data/toc.xml.in.h:4 src/yelp-man.c:434
 msgid "Development"
 msgstr "विकास"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Environments"
-msgstr "विकास"
+msgstr "विकास वातावरण"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Development Tools"
-msgstr "विकास"
+msgstr "विकास उपकरण"
 
 #: data/toc.xml.in.h:7 stylesheets/l10n.xml.in.h:36
-#, fuzzy
 msgid "Editors"
-msgstr "/संपादन (_E)"
+msgstr "संपादक"
 
 #: data/toc.xml.in.h:8
-#, fuzzy
 msgid "Education Applications"
-msgstr "एप्लीकेशन"
+msgstr "शिक्षाप्रद अनुप्रयोग"
 
 #: data/toc.xml.in.h:9
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "खेल तथा मनोरंजन"
 
 #: data/toc.xml.in.h:10
 msgid "General"
-msgstr ""
+msgstr "सामान्य"
 
 #: data/toc.xml.in.h:11
 msgid "Help Contents"
-msgstr "सहायता के घटक"
+msgstr "मदद विषय-सूची"
 
 #: data/toc.xml.in.h:12
-#, fuzzy
 msgid "Internet Applications"
-msgstr "एप्लीकेशन"
+msgstr "इंटरनेट अनुप्रयोग"
 
 #: data/toc.xml.in.h:13
 msgid "KDE"
-msgstr ""
+msgstr "केडीई"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Kernels"
-msgstr "कर्नल"
+msgstr "कर्नेल्स"
 
 #: data/toc.xml.in.h:15
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "एप्लीकेशन"
+msgstr "मल्टीमीडिया अनुप्रयोग"
 
 #: data/toc.xml.in.h:16
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "ऑफ़िस तथा उत्पादन अनुप्रयोग"
 
 #: data/toc.xml.in.h:17
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "एप्लीकेशन"
+msgstr "वैज्ञानिक अनुप्रयोग"
 
 #: data/toc.xml.in.h:18
 msgid "Securities"
-msgstr ""
+msgstr "सुरक्षा"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "System"
-msgstr "सिस्टम काल्स"
+msgstr "तंत्र"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
-msgstr ""
+msgstr "यूटिलिटीज़"
 
 #: data/toc.xml.in.h:21
-#, fuzzy
 msgid "X Applications"
-msgstr "एप्लीकेशन"
+msgstr "एक्स अनुप्रयोग"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -117,15 +104,15 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "C_ase sensitive"
-msgstr ""
+msgstr "छोटे-बड़े अक्षर के प्रति संवेदनशील (_a)"
 
 #: data/ui/yelp.glade.h:3
 msgid "Find"
-msgstr ""
+msgstr "ढूंढें"
 
 #: data/ui/yelp.glade.h:4
 msgid "_Find: "
-msgstr ""
+msgstr "ढूंढें: (_F)"
 
 #: data/ui/yelp.glade.h:5
 msgid "_Next"
@@ -137,84 +124,79 @@ msgstr "पिछला (_P)"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Wrap around"
-msgstr ""
+msgstr "व्रेप अराउंड (_W)"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
-msgstr "यल्प"
+msgstr "येल्प"
 
 #: src/GNOME_Yelp.server.in.h:2
 msgid "Yelp Factory"
-msgstr "यल्प कारखाना"
+msgstr "येल्प फ़ैक्ट्री"
 
-#: src/yelp-db-pager.c:435 src/yelp-man-pager.c:301
+#: src/yelp-db-pager.c:438 src/yelp-man-pager.c:301
 msgid "No href attribute found on yelp:document"
-msgstr ""
+msgstr "येल्प:दस्तावेज़ में कोई href गुण नहीं मिला"
 
-#: src/yelp-db-pager.c:450 src/yelp-man-pager.c:316
+#: src/yelp-db-pager.c:453 src/yelp-man-pager.c:316
 msgid "Out of memory"
-msgstr ""
+msgstr "मेमोरी कम पड़ गई"
 
-#: src/yelp-db-pager.c:638 src/yelp-man-pager.c:370
+#: src/yelp-db-pager.c:641 src/yelp-man-pager.c:370
 msgid "Titlepage"
-msgstr ""
+msgstr "शीर्षक-पृष्ठ"
 
-#: src/yelp-db-pager.c:640 stylesheets/l10n.xml.in.h:30
+#: src/yelp-db-pager.c:643 stylesheets/l10n.xml.in.h:30
 #: src/yelp-man-pager.c:372
-#, fuzzy
 msgid "Contents"
-msgstr "सहायता के घटक"
+msgstr "विषय सूची"
 
-#: src/yelp-db-pager.c:658 stylesheets/l10n.xml.in.h:69
+#: src/yelp-db-pager.c:661 stylesheets/l10n.xml.in.h:69
 #: src/yelp-man-pager.c:390
 msgid "Unknown"
-msgstr ""
+msgstr "अज्ञात"
 
 #: src/yelp-error.c:46
-#, fuzzy
 msgid "The selected document could not be opened"
-msgstr "दस्तावेज '%s' नहीं हैे"
+msgstr "चयनित दस्तावेज़ खोला नहीं जा सका"
 
 #: src/yelp-error.c:52
-#, fuzzy
 msgid "The selected page could not be found in this document."
-msgstr "दस्तावेज '%s' नहीं हैे"
+msgstr "इस दस्तावेज़ में चयनित पृष्ठ नहीं मिला."
 
 #: src/yelp-error.c:58
-#, fuzzy
 msgid "The table of contents could not be read."
-msgstr "दस्तावेज '%s' नहीं हैे"
+msgstr "विषय-सूची तालिका पढ़ी नहीं जा सकी."
 
 #: src/yelp-error.c:64
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
+msgstr "डॉक-बुक एसजीएमएल दस्तावेज़ अब समर्थित नहीं हैं."
 
 #: src/yelp-error.c:70
-#, fuzzy
 msgid "The selected file could not be read."
-msgstr "दस्तावेज '%s' नहीं हैे"
+msgstr "चयनित फ़ाइल पढ़ा नहीं जा सका."
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
-msgstr "कैश के लिए प्रयुक्त डॉयरेक्ट्री "
+msgstr "पारिभाषित करें कि कौन सी कैश डिरेक्ट्री उपयोग करना है"
 
 #: src/yelp-main.c:128
 #, c-format
 msgid "Could not activate Yelp: '%s'"
-msgstr "यल्प को चालू नही कर सके: %s"
+msgstr "येल्प प्रारंभ नही कर सका: '%s'"
 
 #: src/yelp-main.c:147
 msgid "Could not open new window."
-msgstr "नयी विन्डो नहीं खुल पा रही"
+msgstr "नई विंडो खोल नहीं सका."
 
 #: src/yelp-man.c:296 src/yelp-man.c:317 src/yelp-man.c:353 src/yelp-man.c:385
 #: src/yelp-man.c:401 src/yelp-man.c:412
 msgid "X11"
-msgstr "एक्स 11"
+msgstr "एक्स11"
 
 #: src/yelp-man.c:301 src/yelp-man.c:332 src/yelp-man.c:390 src/yelp-man.c:417
 msgid "OpenSSL"
-msgstr "एस एस एल खोलो"
+msgstr "ओपन-एसएसएल"
 
 #: src/yelp-man.c:306
 msgid "Termcap"
@@ -226,15 +208,15 @@ msgstr "पर्ल"
 
 #: src/yelp-man.c:327
 msgid "Qt"
-msgstr "क्यू टी"
+msgstr "क्यूटी"
 
 #: src/yelp-man.c:337
 msgid "TIFF"
-msgstr "टी आई एफ एफ"
+msgstr "टीआईएफ़एफ़"
 
 #: src/yelp-man.c:342
 msgid "PThreads"
-msgstr "पीथ्रेड्स"
+msgstr "पी-थ्रेड्स"
 
 #: src/yelp-man.c:364
 msgid "System Calls"
@@ -242,11 +224,11 @@ msgstr "सिस्टम काल्स"
 
 #: src/yelp-man.c:369
 msgid "Library Functions"
-msgstr "लायब्रेरी"
+msgstr "लायब्रेरी फ़ंक्शन्स"
 
 #: src/yelp-man.c:374
 msgid "Kernel Routines"
-msgstr "कर्नल"
+msgstr "कर्नेल रूटीन्स"
 
 #: src/yelp-man.c:439
 msgid "Hardware Devices"
@@ -254,7 +236,7 @@ msgstr "हार्डवेयर उपकरण"
 
 #: src/yelp-man.c:444
 msgid "Configuration Files"
-msgstr "फाईल की संरचना"
+msgstr "कॉन्फ़िगरेशन फ़ाइलें"
 
 #: src/yelp-man.c:449
 msgid "Games"
@@ -266,25 +248,24 @@ msgstr "संक्षेप"
 
 #: src/yelp-man.c:459
 msgid "System Administration"
-msgstr "सिस्टम प्रधान"
+msgstr "तंत्र प्रशासन"
 
 #: src/yelp-pager.c:118
-#, fuzzy
 msgid "Document URI"
-msgstr "दस्तावेज"
+msgstr "दस्तावेज यूआरआई"
 
 #: src/yelp-pager.c:119
 msgid "The URI of the document to be processed"
-msgstr ""
+msgstr "दस्तावेज़ का यूआरआई जिसे प्रॉसेस की जानी है"
 
 #: src/yelp-toc-pager.c:267
 msgid "YelpTocPager: Pause count is negative."
-msgstr ""
+msgstr "येल्प-टीओसी-पेज़र: पॉज़ गणन ऋणात्मक है."
 
 #: src/yelp-toc-pager.c:487
-#, fuzzy, c-format
+#, c-format
 msgid "Could not load the OMF file '%s'."
-msgstr "यल्प को चालू नही कर सके: %s"
+msgstr "ओएमएफ़ फ़ाइल '%s' लोड नहीं कर सका."
 
 #: src/yelp-toc-pager.c:884
 msgid "Categories"
@@ -292,90 +273,83 @@ msgstr "वर्ग"
 
 #: src/yelp-toc-pager.c:898
 msgid "Documents"
-msgstr "दस्तावेज"
+msgstr "दस्तावेज़"
 
 #: src/yelp-window.c:249
 msgid "/_File"
-msgstr "/फाइल (_F)"
+msgstr "/फ़ाइल (_F)"
 
 #: src/yelp-window.c:250
 msgid "/File/_New window"
-msgstr "/फाइल/नयी विन्डो (_N)"
+msgstr "/फ़ाइल/नई विंडो (_N)"
 
 #: src/yelp-window.c:253
 msgid "/File/_Close window"
-msgstr "/फाईल/विन्डो बंद करना (_C)"
+msgstr "/फ़ाइल/विंडो बंद करें (_C)"
 
 #: src/yelp-window.c:257
 msgid "/_Edit"
 msgstr "/संपादन (_E)"
 
 #: src/yelp-window.c:258
-#, fuzzy
 msgid "/Edit/_Find..."
-msgstr "/संपादन/पृष्ट में ढूंडे ... (_F)"
+msgstr "/संपादन/ढूंढें... (_F)"
 
 #: src/yelp-window.c:261
-#, fuzzy
 msgid "/Edit/Find Ne_xt"
-msgstr "/संपादन/फिर ढूंडे (_F)"
+msgstr "/संपादन/अगला ढूंढें (_x)"
 
 #: src/yelp-window.c:264
-#, fuzzy
 msgid "/Edit/Find Pre_vious"
-msgstr "/संपादन/फिर ढूंडे (_F)"
+msgstr "/संपादन/पिछला ढूंढें (_v)"
 
 #: src/yelp-window.c:268
 msgid "/_Go"
-msgstr "/जाना (_G)"
+msgstr "/जाएँ (_G)"
 
 #: src/yelp-window.c:269
 msgid "/Go/_Back"
-msgstr "/जाना/पीछे (_B)"
+msgstr "/जाएँ/पीछे (_B)"
 
 #: src/yelp-window.c:272
 msgid "/Go/_Forward"
-msgstr "/जाना/आगे (_F)"
+msgstr "/जाएँ/आगे (_F)"
 
 #: src/yelp-window.c:275
 msgid "/Go/_Home"
-msgstr "/जाना/पहले (_H)"
+msgstr "/जाएँ/घर (_H)"
 
 #: src/yelp-window.c:278
-#, fuzzy
 msgid "/Go/"
-msgstr "/जाना (_G)"
+msgstr "/जाएँ/"
 
 #: src/yelp-window.c:279
-#, fuzzy
 msgid "/Go/_Previous Page"
-msgstr "पिछला (_P)"
+msgstr "/जाएँ/पिछला पृष्ठ (_P)"
 
 #: src/yelp-window.c:282
-#, fuzzy
 msgid "/Go/_Next Page"
-msgstr "/जाना/विवरण (_I)"
+msgstr "/जाएँ/अगला पृष्ठ (_N)"
 
 #: src/yelp-window.c:285
-#, fuzzy
 msgid "/Go/_Contents"
-msgstr "सहायता के घटक"
+msgstr "/जाएँ/विषय-सूची (_C)"
 
 #: src/yelp-window.c:289
 msgid "/_Help"
-msgstr "/सहायता  (_H)"
+msgstr "/मदद  (_H)"
 
 #: src/yelp-window.c:290
 msgid "/Help/_About"
-msgstr "/सहायता/के बारे में (_A)"
+msgstr "/मदद/के बारे में (_A)"
 
 #: src/yelp-window.c:352
 msgid "Help Browser"
-msgstr "सहायता ब्राउजर"
+msgstr "मदद ब्राउज़र"
 
 #: src/yelp-window.c:570 stylesheets/l10n.xml.in.h:61
 msgid "Section"
-msgstr "विभाग"
+msgstr "खण्ड"
 
 #: src/yelp-window.c:625
 msgid "Back"
@@ -383,15 +357,15 @@ msgstr "पीछे"
 
 #: src/yelp-window.c:626
 msgid "Show previous page in history"
-msgstr "पहले का पिछला पन्ना दिखाओ"
+msgstr "इतिहास में पिछला पृष्ठ दिखाएँ"
 
 #: src/yelp-window.c:636
 msgid "Forward"
-msgstr "आगे बढ़ना"
+msgstr "आगे"
 
 #: src/yelp-window.c:637
 msgid "Show next page in history"
-msgstr "इतिहास का अगला पन्ना दिखाओ"
+msgstr "इतिहास में अगला पृष्ठ दिखाएँ"
 
 #: src/yelp-window.c:649
 msgid "Home"
@@ -399,347 +373,293 @@ msgstr "घर"
 
 #: src/yelp-window.c:650
 msgid "Go to home view"
-msgstr "घर के दश्य पर जाएं"
+msgstr "घर दृश्य पर जाएँ"
 
 #: src/yelp-window.c:860
 msgid "Loading..."
-msgstr "लोड हो रहा है..."
+msgstr "लोड कर रहे..."
 
+#  Note to translators: put here your name (and address) so it
+#  * will shop up in the "about" box
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
-#: src/yelp-window.c:1303
+#: src/yelp-window.c:1304
 msgid "translator_credits"
-msgstr "अनुवादकों को श्रेय  (_c)"
+msgstr ""
+"जी करुणाकर (karunakar@freedomink.org), रविशंकर श्रीवास्तव (raviratlami@yahoo.com)"
 
-#: src/yelp-window.c:1309
+#: src/yelp-window.c:1310
 msgid "A Help Browser for GNOME"
-msgstr "गनोम के लिए सहायता ब्राउजर"
+msgstr "गनोम हेतु मदद ब्राउज़र"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr ""
+msgstr "&#8216;"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr ""
+msgstr "&#8217;"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr ""
+msgstr "&#8220;"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr ""
+msgstr "&#8221;"
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Article"
-msgstr ""
+msgstr "इस आलेख के बारे में"
 
 #: stylesheets/l10n.xml.in.h:6
 msgid "About This Bibliography"
-msgstr ""
+msgstr "इस ग्रंथसूची के बारे में"
 
 #: stylesheets/l10n.xml.in.h:7
 msgid "About This Book"
-msgstr ""
+msgstr "इस पुस्तक के बारे में"
 
 #: stylesheets/l10n.xml.in.h:8
 msgid "About This Chapter"
-msgstr ""
+msgstr "इस अध्याय के बारे में"
 
 #: stylesheets/l10n.xml.in.h:9
 msgid "About This Entry"
-msgstr ""
+msgstr "इस प्रविष्टि के बारे में"
 
 #: stylesheets/l10n.xml.in.h:10
 msgid "About This Glossary"
-msgstr ""
+msgstr "इस शब्दसंग्रह के बारे में"
 
 #: stylesheets/l10n.xml.in.h:11
 msgid "About This Index"
-msgstr ""
+msgstr "इस निर्देशिका के बारे में"
 
 #: stylesheets/l10n.xml.in.h:12
 msgid "About This Part"
-msgstr ""
+msgstr "इस हिस्से के बारे में"
 
 #: stylesheets/l10n.xml.in.h:13
 msgid "About This Preface"
-msgstr ""
+msgstr "इस प्रीफ़ेस के बारे में"
 
 #: stylesheets/l10n.xml.in.h:14
 msgid "About This Reference"
-msgstr ""
+msgstr "इस सन्दर्भ के बारे में"
 
 #: stylesheets/l10n.xml.in.h:15
 msgid "About This Section"
-msgstr ""
+msgstr "इस खण्ड के बारे में"
 
 #: stylesheets/l10n.xml.in.h:16
 msgid "About This Set"
-msgstr ""
+msgstr "इस सेट के बारे में"
 
 #: stylesheets/l10n.xml.in.h:17
-#, fuzzy
 msgid "Affiliation"
-msgstr "एप्लीकेशन"
+msgstr "से सम्बद्ध"
 
 #: stylesheets/l10n.xml.in.h:18
 msgid "Appendix"
-msgstr ""
+msgstr "परिशिष्ट"
 
 #: stylesheets/l10n.xml.in.h:19
 msgid "Article"
-msgstr ""
+msgstr "आलेख"
 
 #: stylesheets/l10n.xml.in.h:20
 msgid "Audience"
-msgstr ""
+msgstr "सभा"
 
 #: stylesheets/l10n.xml.in.h:21
 msgid "Author"
-msgstr ""
+msgstr "लेखक"
 
 #: stylesheets/l10n.xml.in.h:22
 msgid "Authors"
-msgstr ""
+msgstr "लेखकगण"
 
 #: stylesheets/l10n.xml.in.h:23
 msgid "Bibliography"
-msgstr ""
+msgstr "ग्रंथसूची"
 
 #: stylesheets/l10n.xml.in.h:24
 msgid "Book"
-msgstr ""
+msgstr "पुस्तक"
 
 #: stylesheets/l10n.xml.in.h:25
 msgid "Caution"
-msgstr ""
+msgstr "चेतावनी"
 
 #: stylesheets/l10n.xml.in.h:26
 msgid "Chapter"
-msgstr ""
+msgstr "अध्याय"
 
 #: stylesheets/l10n.xml.in.h:27
 msgid "Collaborator"
-msgstr ""
+msgstr "सहयोगी"
 
 #: stylesheets/l10n.xml.in.h:28
 msgid "Collaborators"
-msgstr ""
+msgstr "सहयोगी"
 
 #: stylesheets/l10n.xml.in.h:29
 msgid "Colophon"
-msgstr ""
+msgstr "पुष्पिका"
 
 #: stylesheets/l10n.xml.in.h:31
 msgid "Copyright"
-msgstr ""
+msgstr "सर्वाधिकार सुरक्षित"
 
 #: stylesheets/l10n.xml.in.h:32
 msgid "Copyrights"
-msgstr ""
+msgstr "सर्वाधिकार"
 
 #: stylesheets/l10n.xml.in.h:33
 msgid "Date"
-msgstr ""
+msgstr "तिथि"
 
 #: stylesheets/l10n.xml.in.h:34
-#, fuzzy
 msgid "Dedication"
-msgstr "विभाग"
+msgstr "समर्पण"
 
 #: stylesheets/l10n.xml.in.h:35
-#, fuzzy
 msgid "Editor"
-msgstr "/संपादन (_E)"
+msgstr "संपादक"
 
 #: stylesheets/l10n.xml.in.h:37
 msgid "Email"
-msgstr ""
+msgstr "ईमेल"
 
 #: stylesheets/l10n.xml.in.h:38
 msgid "Example"
-msgstr ""
+msgstr "उदाहरण"
 
 #: stylesheets/l10n.xml.in.h:39
 msgid "Figure"
-msgstr ""
+msgstr "आकृति"
 
 #: stylesheets/l10n.xml.in.h:40
 msgid "Glossary"
-msgstr ""
+msgstr "शब्दसंग्रह"
 
 #: stylesheets/l10n.xml.in.h:41
 msgid "Important"
-msgstr ""
+msgstr "महत्वपूर्ण"
 
 #: stylesheets/l10n.xml.in.h:42
 msgid "Index"
-msgstr "विवरणिका"
+msgstr "निर्देशिका"
 
 #: stylesheets/l10n.xml.in.h:43
 msgid "Legal Notice"
-msgstr ""
+msgstr "कानूनी सूचना"
 
 #: stylesheets/l10n.xml.in.h:44
 msgid "Level"
-msgstr ""
+msgstr "स्तर"
 
 #: stylesheets/l10n.xml.in.h:45
 msgid "Message Audience"
-msgstr ""
+msgstr "संदेश सभा"
 
 #: stylesheets/l10n.xml.in.h:46
 msgid "Message Level"
-msgstr ""
+msgstr "संदेश स्तर"
 
 #: stylesheets/l10n.xml.in.h:47
 msgid "Message Origin"
-msgstr ""
+msgstr "संदेश उद्गम"
 
 #: stylesheets/l10n.xml.in.h:48
 msgid "Note"
-msgstr ""
+msgstr "टिप्पणी"
 
 #: stylesheets/l10n.xml.in.h:49
 msgid "Origin"
-msgstr ""
+msgstr "मूल"
 
 #: stylesheets/l10n.xml.in.h:50
 msgid "Other Contributor"
-msgstr ""
+msgstr "अन्य सहयोगी"
 
 #: stylesheets/l10n.xml.in.h:51
 msgid "Other Contributors"
-msgstr ""
+msgstr "अन्य सहयोगी"
 
 #: stylesheets/l10n.xml.in.h:52
 msgid "Part"
-msgstr ""
+msgstr "भाग"
 
 #: stylesheets/l10n.xml.in.h:53
 msgid "Preface"
-msgstr ""
+msgstr "प्रीफेस"
 
 #: stylesheets/l10n.xml.in.h:54
 msgid "Publisher"
-msgstr ""
+msgstr "प्रकाशक"
 
 #: stylesheets/l10n.xml.in.h:55
 msgid "Publishers"
-msgstr ""
+msgstr "प्रकाशक"
 
 #: stylesheets/l10n.xml.in.h:56
 msgid "Reference"
-msgstr ""
+msgstr "सन्दर्भ"
 
 #: stylesheets/l10n.xml.in.h:57
 msgid "Reference Entry"
-msgstr ""
+msgstr "सन्दर्भ प्रविष्टि"
 
 #: stylesheets/l10n.xml.in.h:58
 msgid "Reference Section"
-msgstr ""
+msgstr "संदर्भ खण्ड"
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Release Information"
-msgstr ""
+msgstr "ज़ारी जानकारी"
 
 #: stylesheets/l10n.xml.in.h:60
 msgid "Revision History"
-msgstr ""
+msgstr "संशोधन इतिहास"
 
 #: stylesheets/l10n.xml.in.h:62
 msgid "See"
-msgstr ""
+msgstr "देखें"
 
 #: stylesheets/l10n.xml.in.h:63
 msgid "See Also"
-msgstr ""
+msgstr "यह भी देखें"
 
 #: stylesheets/l10n.xml.in.h:64
-#, fuzzy
 msgid "Set Index"
-msgstr "विवरणिका"
+msgstr "निर्देशिका नियत करें"
 
 #: stylesheets/l10n.xml.in.h:65
 msgid "Table"
-msgstr ""
+msgstr "तालिका"
 
 #: stylesheets/l10n.xml.in.h:66
-#, fuzzy
 msgid "Table of Contents"
-msgstr "सहायता के घटक"
+msgstr "विषय-सूची तालिका"
 
 #: stylesheets/l10n.xml.in.h:67
 msgid "Tip"
-msgstr ""
+msgstr "युक्ति"
 
 #: stylesheets/l10n.xml.in.h:68
 msgid "Title"
-msgstr ""
+msgstr "शीर्षक"
 
 #: stylesheets/l10n.xml.in.h:70
 msgid "Warning"
-msgstr ""
+msgstr "चेतावनी"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
-msgstr "गनोम से सहायता लो"
+msgstr "गनोम से मदद लें"
 
 #: yelp.desktop.in.h:2
 msgid "Help"
-msgstr "सहायता"
-
-#~ msgid "The document '%s' does not exist"
-#~ msgstr "दस्तावेज '%s' नहीं हैे"
-
-#~ msgid "<b>Find text in the document:</b>"
-#~ msgstr "<b>दस्तावेज मे पाठ्य ढूंडे:</b>"
-
-#~ msgid "Automatically _wrap around"
-#~ msgstr "अपने आप व्रेप"
-
-#~ msgid "Find text..."
-#~ msgstr "पाठ्य ढूंडे..."
-
-#~ msgid "Match _entire word"
-#~ msgstr "पूरा शब्द मिलाएं (_e)"
-
-#~ msgid "_Match upper/lower case"
-#~ msgstr "मिलाएं बडा/छोटा केस (_M)"
-
-#~ msgid "_Search for:"
-#~ msgstr "के लिए खोज: (_S)"
-
-#~ msgid "GNOME - Desktop"
-#~ msgstr "गनोम डेस्कटाप"
-
-#~ msgid "Additional documents"
-#~ msgstr "अन्य दस्तावेज"
-
-#~ msgid "Manual Pages"
-#~ msgstr "निर्देश पुस्तिका"
-
-#~ msgid "Info Pages"
-#~ msgstr "जानकारी के पन्ने"
-
-#~ msgid "Manual pages"
-#~ msgstr "निर्देश पुस्तिका"
-
-#~ msgid "GNOME is"
-#~ msgstr "गनोम है"
-
-#~ msgid "Free Software"
-#~ msgstr "स्वतंत्र सोफटवेर"
-
-#~ msgid "(C)"
-#~ msgstr "(C)"
-
-#, fuzzy
-#~ msgid "Loading..&nbsp;"
-#~ msgstr "लोड हो रहा है..."
-
-#~ msgid "Search in the index"
-#~ msgstr "विवरणिका में खोजें"
+msgstr "मदद"
