--- a/po/eu.po
+++ b/po/eu.po
@@ -1,52 +1,134 @@
+# translation of eu.po to Basque
 # translation of yelp.gnome-2-4.po to basque
 # This file is distributed under the same license as the PACKAGE package.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER.
 # Hizkuntza Politikarako Sailburuordetza <hizpol@ej-gv.es>, 2004.
+# Iñaki Larrañaga Murgoitio <dooteo@euskalgnu.org>, 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp.gnome-2-4\n"
-"POT-Creation-Date: 2003-11-10 11:07-0600\n"
-"PO-Revision-Date: 2004-03-08 12:30GMT\n"
-"Last-Translator: Hizkuntza Politikarako Sailburuordetza <hizpol@ej-gv.es>\n"
-"Language-Team: basque <itzulpena@euskalgnu.org>\n"
+"Project-Id-Version: eu\n"
+"POT-Creation-Date: 2004-08-27 21:29+0200\n"
+"PO-Revision-Date: 2004-08-27 12:01+0200\n"
+"Last-Translator: Iñaki Larrañaga Murgoitio <dooteo@euskalgnu.org>\n"
+"Language-Team: Basque <itzulpena@euskalgnu.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Report-Msgid-Bugs-To: \n"
-"X-Generator: KBabel 1.3\n"
+"X-Generator: KBabel 1.0.2\n"
+
+#: data/toc.xml.in.h:1
+msgid "Applets"
+msgstr "Applet-ak"
+
+#: data/toc.xml.in.h:2 src/yelp-man.c:429
+msgid "Applications"
+msgstr "Aplikazioak"
+
+#: data/toc.xml.in.h:3
+msgid "Desktop"
+msgstr "Mahaigaina"
+
+#: data/toc.xml.in.h:4 src/yelp-man.c:434
+msgid "Development"
+msgstr "Garapena"
+
+#: data/toc.xml.in.h:5
+msgid "Development Environments"
+msgstr "Garapeneko inguruneak"
+
+#: data/toc.xml.in.h:6
+msgid "Development Tools"
+msgstr "Garapeneko tresnak"
+
+#: data/toc.xml.in.h:7 stylesheets/l10n.xml.in.h:36
+msgid "Editors"
+msgstr "Editoreak"
+
+#: data/toc.xml.in.h:8
+msgid "Education Applications"
+msgstr "Hezkuntzako aplikazioak"
+
+#: data/toc.xml.in.h:9
+msgid "Games and Entertainment"
+msgstr "Jokuak eta denbora-pasak"
+
+#: data/toc.xml.in.h:10
+msgid "General"
+msgstr "Orokorra"
+
+#: data/toc.xml.in.h:11
+msgid "Help Contents"
+msgstr "Laguntzaren edukia"
+
+#: data/toc.xml.in.h:12
+msgid "Internet Applications"
+msgstr "Interneteko aplikazioak"
+
+#: data/toc.xml.in.h:13
+msgid "KDE"
+msgstr "KDE"
+
+#: data/toc.xml.in.h:14
+msgid "Kernels"
+msgstr "Nukleoak"
+
+#: data/toc.xml.in.h:15
+msgid "Multimedia Applications"
+msgstr "Multimediako aplikazioak"
+
+#: data/toc.xml.in.h:16
+msgid "Office and Productivity Applications"
+msgstr "Bulegoko eta ekoizpeneko aplikazioak"
+
+#: data/toc.xml.in.h:17
+msgid "Scientific Applications"
+msgstr "Aplikazio zientifikoak"
+
+#: data/toc.xml.in.h:18
+msgid "Securities"
+msgstr "Segurtasunak"
+
+#: data/toc.xml.in.h:19
+msgid "System"
+msgstr "Sistema"
+
+#: data/toc.xml.in.h:20
+msgid "Utilities"
+msgstr "Tresneria"
+
+#: data/toc.xml.in.h:21
+msgid "X Applications"
+msgstr "X aplikazioak"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
 msgstr "*"
 
 #: data/ui/yelp.glade.h:2
-msgid "<b>Find text in the document:</b>"
-msgstr "<b>Bilatu testu hau dokumentuan:</b>"
+msgid "C_ase sensitive"
+msgstr "_Maiuskula/Minuskula"
 
 #: data/ui/yelp.glade.h:3
-msgid "Automatically _wrap around"
-msgstr "Itzul_biratu automatikoki"
+msgid "Find"
+msgstr "Bilatu"
 
 #: data/ui/yelp.glade.h:4
-msgid "Find text..."
-msgstr "Bilatu testua..."
+msgid "_Find: "
+msgstr "_Bilatu:"
 
 #: data/ui/yelp.glade.h:5
-msgid "Match _entire word"
-msgstr "Hitz o_soak soilik"
-
-#: data/ui/yelp.glade.h:6
-msgid "_Match upper/lower case"
-msgstr "_Bereizi maiuskulak eta minuskulak"
-
-#: data/ui/yelp.glade.h:7
 msgid "_Next"
 msgstr "_Hurrengoa"
 
-#: data/ui/yelp.glade.h:8
+#: data/ui/yelp.glade.h:6
 msgid "_Previous"
 msgstr "_Aurrekoa"
+
+#: data/ui/yelp.glade.h:7
+msgid "_Wrap around"
+msgstr "_Itzulbiratu"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -55,6 +137,48 @@ msgstr "Yelp"
 #: src/GNOME_Yelp.server.in.h:2
 msgid "Yelp Factory"
 msgstr "Yelp fabrika"
+
+#: src/yelp-db-pager.c:438 src/yelp-man-pager.c:301
+msgid "No href attribute found on yelp:document"
+msgstr "Ez da href atributurik aurkitu yelp:dokumentuan"
+
+#: src/yelp-db-pager.c:453 src/yelp-man-pager.c:316
+msgid "Out of memory"
+msgstr "Memoriarik ez"
+
+#: src/yelp-db-pager.c:641 src/yelp-man-pager.c:370
+msgid "Titlepage"
+msgstr "Titulu-orria"
+
+#: src/yelp-db-pager.c:643 src/yelp-man-pager.c:372
+#: stylesheets/l10n.xml.in.h:30
+msgid "Contents"
+msgstr "Edukia"
+
+#: src/yelp-db-pager.c:661 src/yelp-man-pager.c:390
+#: stylesheets/l10n.xml.in.h:69
+msgid "Unknown"
+msgstr "Ezezaguna"
+
+#: src/yelp-error.c:46
+msgid "The selected document could not be opened"
+msgstr "Ezin izan da hautatutako dokumentua ireki."
+
+#: src/yelp-error.c:52
+msgid "The selected page could not be found in this document."
+msgstr "Ezin izan da hautatutako orrialdea dokumentu honetan aurkitu."
+
+#: src/yelp-error.c:58
+msgid "The table of contents could not be read."
+msgstr "Ezin izan da gaien aurkibidea irakurri."
+
+#: src/yelp-error.c:64
+msgid "DocBook SGML documents are no longer supported."
+msgstr "Aurrrerantzean, DocBook SGML motako dokumentuak ez dira onartuko."
+
+#: src/yelp-error.c:70
+msgid "The selected file could not be read."
+msgstr "Ezin izan da hautatutako fitxategia irakurri."
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -110,14 +234,6 @@ msgstr "Liburutegi-funtzioak"
 msgid "Kernel Routines"
 msgstr "Nukleo-errutinak"
 
-#: src/yelp-man.c:429
-msgid "Applications"
-msgstr "Aplikazioak"
-
-#: src/yelp-man.c:434
-msgid "Development"
-msgstr "Garapena"
-
 #: src/yelp-man.c:439
 msgid "Hardware Devices"
 msgstr "Hardwarearen gailuak"
@@ -138,165 +254,410 @@ msgstr "Informazio orokorrak"
 msgid "System Administration"
 msgstr "Sistema-administrazioa"
 
-#: src/yelp-view-content.c:487 src/yelp-view-index.c:423
-msgid "Loading..."
-msgstr "Kargatzen..."
+#: src/yelp-pager.c:118
+msgid "Document URI"
+msgstr "Dokumentuaren URIa"
 
-#: src/yelp-view-content.c:528 src/yelp-view-index.c:517
-msgid "Section"
-msgstr "Atala"
+#: src/yelp-pager.c:119
+msgid "The URI of the document to be processed"
+msgstr "Prozesatuko den dokumentuaren URIa"
 
-#: src/yelp-view-index.c:480
-msgid "_Search for:"
-msgstr "Bila_tu:"
+#: src/yelp-toc-pager.c:267
+msgid "YelpTocPager: Pause count is negative."
+msgstr "YelpTocPager: pausarazte-kontagailuak balio negatiboa dauka."
 
-#. GList           *seriesids;
-#: src/yelp-view-toc.c:165
-msgid "Help Contents"
-msgstr "Laguntzaren edukia"
+#: src/yelp-toc-pager.c:487
+#, c-format
+msgid "Could not load the OMF file '%s'."
+msgstr "Ezin izan da OMF fitxategia kargatu: '%s'."
 
-#: src/yelp-view-toc.c:166
-msgid "GNOME - Desktop"
-msgstr "GNOME - Mahaigaina"
-
-#: src/yelp-view-toc.c:167
-msgid "Additional documents"
-msgstr "Dokumentu osagarriak"
-
-#: src/yelp-view-toc.c:168 src/yelp-view-toc.c:492
-msgid "Manual Pages"
-msgstr "Eskuliburuko orrialdeak"
-
-#: src/yelp-view-toc.c:169 src/yelp-view-toc.c:548
-msgid "Info Pages"
-msgstr "Informazio-orriak"
-
-#: src/yelp-view-toc.c:366 src/yelp-view-toc.c:549 src/yelp-view-toc.c:740
-msgid "Documents"
-msgstr "Dokumentuak"
-
-#: src/yelp-view-toc.c:367 src/yelp-view-toc.c:493 src/yelp-view-toc.c:741
+#: src/yelp-toc-pager.c:884
 msgid "Categories"
 msgstr "Kategoriak"
 
-#: src/yelp-view-toc.c:447
-msgid "Manual pages"
-msgstr "Eskuliburuko orrialdeak"
+#: src/yelp-toc-pager.c:898
+msgid "Documents"
+msgstr "Dokumentuak"
 
-#: src/yelp-view-toc.c:707
-msgid "GNOME is"
-msgstr "GNOME "
-
-#: src/yelp-view-toc.c:708
-msgid "Free Software"
-msgstr "software librea da"
-
-#: src/yelp-view-toc.c:709
-msgid "(C)"
-msgstr "(C)"
-
-#: src/yelp-window.c:171
+#: src/yelp-window.c:249
 msgid "/_File"
 msgstr "/_Fitxategia"
 
-#: src/yelp-window.c:172
+#: src/yelp-window.c:250
 msgid "/File/_New window"
 msgstr "/Fitxategia/_Leiho berria"
 
-#: src/yelp-window.c:173
+#: src/yelp-window.c:253
 msgid "/File/_Close window"
 msgstr "/Fitxategia/_Itxi leihoa"
 
-#: src/yelp-window.c:175
+#: src/yelp-window.c:257
 msgid "/_Edit"
 msgstr "/_Editatu"
 
-#: src/yelp-window.c:176
-msgid "/Edit/_Find in page..."
-msgstr "/Editatu/_Bilatu orrialde honetan..."
+#: src/yelp-window.c:258
+msgid "/Edit/_Find..."
+msgstr "/Editatu/_Bilatu..."
 
-#: src/yelp-window.c:177
-msgid "/Edit/_Find again"
-msgstr "/Editatu/_Bilatu berriro"
+#: src/yelp-window.c:261
+msgid "/Edit/Find Ne_xt"
+msgstr "/Editatu/Bilatu _hurregoa"
 
-#: src/yelp-window.c:179
+#: src/yelp-window.c:264
+msgid "/Edit/Find Pre_vious"
+msgstr "/Editatu/Bilatu _aurrekoa"
+
+#: src/yelp-window.c:268
 msgid "/_Go"
 msgstr "/_Joan"
 
-#: src/yelp-window.c:180
+#: src/yelp-window.c:269
 msgid "/Go/_Back"
 msgstr "/Joan/_Atzera"
 
-#: src/yelp-window.c:181
+#: src/yelp-window.c:272
 msgid "/Go/_Forward"
 msgstr "/Joan/A_urrera"
 
-#: src/yelp-window.c:182
+#: src/yelp-window.c:275
 msgid "/Go/_Home"
 msgstr "/Joan/Et_xea"
 
-#: src/yelp-window.c:183
-msgid "/Go/_Index"
-msgstr "/Joan/_Indizea"
+#: src/yelp-window.c:278
+msgid "/Go/"
+msgstr "/Joan/"
 
-#: src/yelp-window.c:185
+#: src/yelp-window.c:279
+msgid "/Go/_Previous Page"
+msgstr "/Joan/_Aurreko orrialdea"
+
+#: src/yelp-window.c:282
+msgid "/Go/_Next Page"
+msgstr "/Joan/_Hurrengo orrialdea"
+
+#: src/yelp-window.c:285
+msgid "/Go/_Contents"
+msgstr "/Joan/_Edukia"
+
+#: src/yelp-window.c:289
 msgid "/_Help"
 msgstr "/Lagu_ntza"
 
-#: src/yelp-window.c:186
+#: src/yelp-window.c:290
 msgid "/Help/_About"
 msgstr "/Laguntza/H_oni buruz"
 
-#: src/yelp-window.c:255 src/yelp-window.c:455
+#: src/yelp-window.c:352
 msgid "Help Browser"
 msgstr "Laguntza-arakatzailea"
 
-#: src/yelp-window.c:368
-#, c-format
-msgid "The document '%s' does not exist"
-msgstr "'%s' dokumentua ez dago"
+#: src/yelp-window.c:570 stylesheets/l10n.xml.in.h:61
+msgid "Section"
+msgstr "Atala"
 
-#. Note to translators: put here your name (and address) so it
-#. * will shop up in the "about" box
-#: src/yelp-window.c:695
-msgid "translator_credits"
-msgstr "Hizkuntza Politikarako Sailburuordetza <hizkpol@ej-gv.es>"
-
-#: src/yelp-window.c:699
-msgid "A Help Browser for GNOME"
-msgstr "GNOMErako laguntza-arakatzailea"
-
-#: src/yelp-window.c:813
+#: src/yelp-window.c:625
 msgid "Back"
 msgstr "Atzera"
 
-#: src/yelp-window.c:814
+#: src/yelp-window.c:626
 msgid "Show previous page in history"
 msgstr "Erakutsi historiako aurreko orrialdea "
 
-#: src/yelp-window.c:825
+#: src/yelp-window.c:636
 msgid "Forward"
 msgstr "Aurrera"
 
-#: src/yelp-window.c:826
+#: src/yelp-window.c:637
 msgid "Show next page in history"
 msgstr "Erakutsi historiako hurrengo orrialdea "
 
-#: src/yelp-window.c:839
+#: src/yelp-window.c:649
 msgid "Home"
 msgstr "Etxea"
 
-#: src/yelp-window.c:840
+#: src/yelp-window.c:650
 msgid "Go to home view"
 msgstr "Joan etxearen ikuspegira"
 
-#: src/yelp-window.c:850
+#: src/yelp-window.c:860
+msgid "Loading..."
+msgstr "Kargatzen..."
+
+#. Note to translators: put here your name (and address) so it
+#. * will shop up in the "about" box
+#: src/yelp-window.c:1304
+msgid "translator_credits"
+msgstr ""
+"Iñaki Larrañaga  <dooteo@euskalgnu.org>\n"
+"Hizkuntza Politikarako Sailburuordetza <hizkpol@ej-gv.es>"
+
+#: src/yelp-window.c:1310
+msgid "A Help Browser for GNOME"
+msgstr "GNOMErako laguntza-arakatzailea"
+
+#: stylesheets/l10n.xml.in.h:1
+msgid "&#8216;"
+msgstr "&#8216;"
+
+#: stylesheets/l10n.xml.in.h:2
+msgid "&#8217;"
+msgstr "&#8217;"
+
+#: stylesheets/l10n.xml.in.h:3
+msgid "&#8220;"
+msgstr "&#8220;"
+
+#: stylesheets/l10n.xml.in.h:4
+msgid "&#8221;"
+msgstr "&#8221;"
+
+#: stylesheets/l10n.xml.in.h:5
+msgid "About This Article"
+msgstr "Artikulu honi buruz"
+
+#: stylesheets/l10n.xml.in.h:6
+msgid "About This Bibliography"
+msgstr "Bibliografia honi buruz"
+
+#: stylesheets/l10n.xml.in.h:7
+msgid "About This Book"
+msgstr "Liburu honi buruz"
+
+#: stylesheets/l10n.xml.in.h:8
+msgid "About This Chapter"
+msgstr "Kapitulu honi buruz"
+
+#: stylesheets/l10n.xml.in.h:9
+msgid "About This Entry"
+msgstr "Sarrera honi buruz"
+
+#: stylesheets/l10n.xml.in.h:10
+msgid "About This Glossary"
+msgstr "Glosategi honi buruz"
+
+#: stylesheets/l10n.xml.in.h:11
+msgid "About This Index"
+msgstr "Indize honi buruz"
+
+#: stylesheets/l10n.xml.in.h:12
+msgid "About This Part"
+msgstr "Zati honi buruz"
+
+#: stylesheets/l10n.xml.in.h:13
+msgid "About This Preface"
+msgstr "Hitzaurre honi buruz"
+
+#: stylesheets/l10n.xml.in.h:14
+msgid "About This Reference"
+msgstr "Erreferentzia honi buruz"
+
+#: stylesheets/l10n.xml.in.h:15
+msgid "About This Section"
+msgstr "Atal honi buruz"
+
+#: stylesheets/l10n.xml.in.h:16
+msgid "About This Set"
+msgstr "Multzo honi buruz"
+
+#: stylesheets/l10n.xml.in.h:17
+msgid "Affiliation"
+msgstr "Afiliazio"
+
+#: stylesheets/l10n.xml.in.h:18
+msgid "Appendix"
+msgstr "Eranskina"
+
+#: stylesheets/l10n.xml.in.h:19
+msgid "Article"
+msgstr "Artikulua"
+
+#: stylesheets/l10n.xml.in.h:20
+msgid "Audience"
+msgstr "Entzulegoa"
+
+#: stylesheets/l10n.xml.in.h:21
+msgid "Author"
+msgstr "Egilea"
+
+#: stylesheets/l10n.xml.in.h:22
+msgid "Authors"
+msgstr "Egileak"
+
+#: stylesheets/l10n.xml.in.h:23
+msgid "Bibliography"
+msgstr "Bibliografia"
+
+#: stylesheets/l10n.xml.in.h:24
+msgid "Book"
+msgstr "Liburua"
+
+#: stylesheets/l10n.xml.in.h:25
+msgid "Caution"
+msgstr "Kontuz"
+
+#: stylesheets/l10n.xml.in.h:26
+msgid "Chapter"
+msgstr "Kapitulua"
+
+#: stylesheets/l10n.xml.in.h:27
+msgid "Collaborator"
+msgstr "Laguntzailea"
+
+#: stylesheets/l10n.xml.in.h:28
+msgid "Collaborators"
+msgstr "Laguntzaileak"
+
+#: stylesheets/l10n.xml.in.h:29
+msgid "Colophon"
+msgstr "Azken oharra"
+
+#: stylesheets/l10n.xml.in.h:31
+msgid "Copyright"
+msgstr "Copyright-a"
+
+#: stylesheets/l10n.xml.in.h:32
+msgid "Copyrights"
+msgstr "Copyright-ak"
+
+#: stylesheets/l10n.xml.in.h:33
+msgid "Date"
+msgstr "Data"
+
+#: stylesheets/l10n.xml.in.h:34
+msgid "Dedication"
+msgstr "Eskaintza"
+
+#: stylesheets/l10n.xml.in.h:35
+msgid "Editor"
+msgstr "Editorea"
+
+#: stylesheets/l10n.xml.in.h:37
+msgid "Email"
+msgstr "Hel.Elek."
+
+#: stylesheets/l10n.xml.in.h:38
+msgid "Example"
+msgstr "Adibidea"
+
+#: stylesheets/l10n.xml.in.h:39
+msgid "Figure"
+msgstr "Irudia"
+
+#: stylesheets/l10n.xml.in.h:40
+msgid "Glossary"
+msgstr "Glosategia"
+
+#: stylesheets/l10n.xml.in.h:41
+msgid "Important"
+msgstr "Garrantzitsua"
+
+#: stylesheets/l10n.xml.in.h:42
 msgid "Index"
 msgstr "Indizea"
 
-#: src/yelp-window.c:851
-msgid "Search in the index"
-msgstr "Bilatu indizean"
+#: stylesheets/l10n.xml.in.h:43
+msgid "Legal Notice"
+msgstr "Legediko oharra"
+
+#: stylesheets/l10n.xml.in.h:44
+msgid "Level"
+msgstr "Maila"
+
+#: stylesheets/l10n.xml.in.h:45
+msgid "Message Audience"
+msgstr "Mezuaren entzulegoa"
+
+#: stylesheets/l10n.xml.in.h:46
+msgid "Message Level"
+msgstr "Mezuaren maila"
+
+#: stylesheets/l10n.xml.in.h:47
+msgid "Message Origin"
+msgstr "Mezuaren jatorria"
+
+#: stylesheets/l10n.xml.in.h:48
+msgid "Note"
+msgstr "Oharra"
+
+#: stylesheets/l10n.xml.in.h:49
+msgid "Origin"
+msgstr "Jatorria"
+
+#: stylesheets/l10n.xml.in.h:50
+msgid "Other Contributor"
+msgstr "Beste laguntzailea"
+
+#: stylesheets/l10n.xml.in.h:51
+msgid "Other Contributors"
+msgstr "Beste laguntzaileak"
+
+#: stylesheets/l10n.xml.in.h:52
+msgid "Part"
+msgstr "Zatia"
+
+#: stylesheets/l10n.xml.in.h:53
+msgid "Preface"
+msgstr "Hitzaurrea"
+
+#: stylesheets/l10n.xml.in.h:54
+msgid "Publisher"
+msgstr "Argitaratzailea"
+
+#: stylesheets/l10n.xml.in.h:55
+msgid "Publishers"
+msgstr "Argitaratzaileak"
+
+#: stylesheets/l10n.xml.in.h:56
+msgid "Reference"
+msgstr "Erreferentzia"
+
+#: stylesheets/l10n.xml.in.h:57
+msgid "Reference Entry"
+msgstr "Erreferentzi-sarrera"
+
+#: stylesheets/l10n.xml.in.h:58
+msgid "Reference Section"
+msgstr "Erreferentzi-atala"
+
+#: stylesheets/l10n.xml.in.h:59
+msgid "Release Information"
+msgstr "Argitalpenaren informazioa"
+
+#: stylesheets/l10n.xml.in.h:60
+msgid "Revision History"
+msgstr "Historiaren berrikustea"
+
+#: stylesheets/l10n.xml.in.h:62
+msgid "See"
+msgstr "Ikusi"
+
+#: stylesheets/l10n.xml.in.h:63
+msgid "See Also"
+msgstr "Ikusi baita ere"
+
+#: stylesheets/l10n.xml.in.h:64
+msgid "Set Index"
+msgstr "Ezarri indizea"
+
+#: stylesheets/l10n.xml.in.h:65
+msgid "Table"
+msgstr "Taula"
+
+#: stylesheets/l10n.xml.in.h:66
+msgid "Table of Contents"
+msgstr "Gaien edukia"
+
+#: stylesheets/l10n.xml.in.h:67
+msgid "Tip"
+msgstr "Aholkua"
+
+#: stylesheets/l10n.xml.in.h:68
+msgid "Title"
+msgstr "Titulua"
+
+#: stylesheets/l10n.xml.in.h:70
+msgid "Warning"
+msgstr "Abisua"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
@@ -305,3 +666,51 @@ msgstr "Eskuratu GNOMEri buruzko laguntza "
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Laguntza"
+
+#~ msgid "<b>Find text in the document:</b>"
+#~ msgstr "<b>Bilatu testu hau dokumentuan:</b>"
+
+#~ msgid "Automatically _wrap around"
+#~ msgstr "Itzul_biratu automatikoki"
+
+#~ msgid "Find text..."
+#~ msgstr "Bilatu testua..."
+
+#~ msgid "Match _entire word"
+#~ msgstr "Hitz o_soak soilik"
+
+#~ msgid "_Match upper/lower case"
+#~ msgstr "_Bereizi maiuskulak eta minuskulak"
+
+#~ msgid "_Search for:"
+#~ msgstr "Bila_tu:"
+
+#~ msgid "Additional documents"
+#~ msgstr "Dokumentu osagarriak"
+
+#~ msgid "Manual Pages"
+#~ msgstr "Eskuliburuko orrialdeak"
+
+#~ msgid "Info Pages"
+#~ msgstr "Informazio-orriak"
+
+#~ msgid "Manual pages"
+#~ msgstr "Eskuliburuko orrialdeak"
+
+#~ msgid "GNOME is"
+#~ msgstr "GNOME "
+
+#~ msgid "Free Software"
+#~ msgstr "software librea da"
+
+#~ msgid "(C)"
+#~ msgstr "(C)"
+
+#~ msgid "/Go/_Index"
+#~ msgstr "/Joan/_Indizea"
+
+#~ msgid "The document '%s' does not exist"
+#~ msgstr "'%s' dokumentua ez dago"
+
+#~ msgid "Search in the index"
+#~ msgstr "Bilatu indizean"
